--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+  <!-- <script src="../path/to/flowbite/dist/flowbite.js"></script> -->
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -41,9 +42,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script>
-    new WOW().init();
-  </script>
+
 </body>
 
 </html>
